--- a/.github/workflows/sample-action.yml
+++ b/.github/workflows/sample-action.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: calling remote action
-        uses: mmarinel/Test_MyAction
+        uses: mmarinel/Test_MyAction@v1
